# hestia

./: .gitignore  CHANGELOG  README.md  README.rst  app.json  package-lock.json  package.json  pubspec.yaml  pyproject.toml  pyrightconfig.json  requirements.txt  setup.cfg
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
lib/: main.dart
lib/l10n/: app_en.arb  intl_en.arb
lib/ui/home/: home_page.dart
linux/: CMakeLists.txt
src/hestia/: __main__.py  app.py
test/: widget_test.dart
windows/: CMakeLists.txt
