[metadata]
name = hestia
version = 0.1.0
author = David Hidalgo - Skaihen
description = Multiplatform recipe book
long_description = file: README.md
license = GPL-3
license_files = LICENSE

classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Other Audience
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Utilities

[options]
packages = find:
include_package_data = True
python_requires = >= 3.8
setup_requires =
    setuptools >= 40.6
    pip >= 10
install_requires =
    "kivy[base]" >= 2.2.1

[options.packages.find]
include =
    src
    src.*

[options.extras_require]
dev =
